fix feed-card header alignment issue by revert back the using 2 UserPopOverCard code and fix some css

--- a/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/ActivityFeedCard/FeedCardHeader/feed-card-header-v1.style.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/ActivityFeedCard/FeedCardHeader/feed-card-header-v1.style.less
@@ -15,7 +15,7 @@
 
 .feed-header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 
   .thread-author {
     font-weight: 600;
